--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,79 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:orientation="vertical"
-    android:paddingStart="@dimen/layout_margin"
-    android:paddingEnd="@dimen/layout_margin"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="myName"
+            type="com.example.aboutme.MyName" />
 
-    <TextView
-        android:id="@+id/nameText"
-        style="@style/nameStyle"
-        android:layout_width="354dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/layout_margin"
-        android:text="@string/name"
-        android:textAlignment="center" />
+    </data>
 
-    <EditText
-        android:id="@+id/nickname_edit"
-        style="@style/nameStyle"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/what_is_your_nickname"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:textAlignment="center" />
-
-    <Button
-        android:id="@+id/done_button"
-        style="Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/layout_margin"
-        android:fontFamily="@font/roboto"
-        android:text="Done" />
-
-    <TextView
-        android:id="@+id/nickname_Text"
-        style="@style/nameStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:visibility="gone"
-        android:background="@color/purple_200"
-        android:paddingBottom="@dimen/small_padding"
-        />
-
-    <ImageView
-        android:id="@+id/star_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:contentDescription="@string/yellow_star"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:ignore="ImageContrastCheck" />
-
-    <ScrollView
-        android:id="@+id/bio_scroll"
-        android:layout_width="370dp"
-        android:layout_height="577dp"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
+        android:orientation="vertical"
         android:paddingStart="@dimen/layout_margin"
-        android:paddingEnd="@dimen/layout_margin">
+        android:paddingEnd="@dimen/layout_margin"
+        tools:context=".MainActivity">
 
         <TextView
-            android:id="@+id/bio_text"
-            style="@style/layoutPadding"
+            android:id="@+id/nameText"
+            style="@style/nameStyle"
+            android:layout_width="354dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/layout_margin"
+            android:text="@={myName.name}"
+            android:textAlignment="center" />
+
+        <EditText
+            android:id="@+id/nickname_edit"
+            style="@style/nameStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/bio" />
-    </ScrollView>
+            android:ems="10"
+            android:hint="@string/what_is_your_nickname"
+            android:inputType="textPersonName"
+            android:minHeight="48dp"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/done_button"
+            style="Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/layout_margin"
+            android:fontFamily="@font/roboto"
+            android:text="Done" />
+
+        <TextView
+            android:id="@+id/nickname_Text"
+            style="@style/nameStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/purple_200"
+            android:paddingBottom="@dimen/small_padding"
+            android:textAlignment="center"
+            android:visibility="gone"
+            android:text="@={myName.nickname}"/>
+
+        <ImageView
+            android:id="@+id/star_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:contentDescription="@string/yellow_star"
+            app:srcCompat="@android:drawable/btn_star_big_on"
+            tools:ignore="ImageContrastCheck" />
+
+        <ScrollView
+            android:id="@+id/bio_scroll"
+            android:layout_width="370dp"
+            android:layout_height="577dp"
+            android:paddingStart="@dimen/layout_margin"
+            android:paddingEnd="@dimen/layout_margin">
+
+            <TextView
+                android:id="@+id/bio_text"
+                style="@style/layoutPadding"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/bio" />
+        </ScrollView>
 
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
